インターフェースとサービスの追加、トランザクションのCRUD操作を実装

--- a/KakeiboApp.ViewModel/KakeiboApp.ViewModel.csproj
+++ b/KakeiboApp.ViewModel/KakeiboApp.ViewModel.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\KakeiboApp.Core\KakeiboApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+  </ItemGroup>
+
 </Project>
