--- a/KakeiboApp/KakeiboApp.csproj
+++ b/KakeiboApp/KakeiboApp.csproj
@@ -24,7 +24,7 @@
 		<ApplicationTitle>KakeiboApp</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.kakeiboapp</ApplicationId>
+		<ApplicationId>uny-try.kakeiboapp</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -60,7 +60,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.82" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 	</ItemGroup>
 
