--- a/KakeiboApp/KakeiboApp.csproj
+++ b/KakeiboApp/KakeiboApp.csproj
@@ -19,6 +19,8 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
+
 
 		<!-- Display name -->
 		<ApplicationTitle>KakeiboApp</ApplicationTitle>
