ApplicationTitle の変更とぺーじのタイトルの削除

--- a/KakeiboApp/KakeiboApp.csproj
+++ b/KakeiboApp/KakeiboApp.csproj
@@ -23,7 +23,7 @@
 
 
 		<!-- Display name -->
-		<ApplicationTitle>KakeiboApp</ApplicationTitle>
+		<ApplicationTitle>私の家計簿</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>uny-try.kakeiboapp</ApplicationId>
